ci: run distcheck and enable minimal compiler warnings
Add a new configuration option (`enable-werror`), to fail the build on
any compiler warnings.  This is beneficial to passing `-Werror` via
CFLAGS, since this flag should not bet for test compilations during the
configuration step itself.

--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,11 @@ AM_CONDITIONAL(MISSING_FMEMOPEN, [test "x$ac_cv_func_fmemopen" = "xno"])
 AM_CONDITIONAL(MISSING_REALLOCARRAY, [test "x$ac_cv_func_reallocarray" = "xno"])
 AM_CONDITIONAL(WINDOWS_BUILD, [test "x$ac_cv_header_windows_h" = "xyes"])
 
+AC_ARG_ENABLE([werror],
+	[AS_HELP_STRING([--enable-werror], [Treat compiler warnings as errors @<:@default=off@:>@])],
+	[AM_CFLAGS+=" -Werror"])
+AC_SUBST([AM_CFLAGS])
+
 # Files to generate
 AC_CONFIG_FILES([Makefile \
 		 src/Makefile \
