--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,21 +28,24 @@ jobs:
         run: |
           sudo apt-get -y update
           sudo apt-get -y install tree doxygen autopoint
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Configure
         run: |
           ./autogen.sh
-          ./configure --prefix= --disable-silent-rules
+          ./configure --prefix= --disable-silent-rules --enable-werror CFLAGS=-Wall
       - name: Build
         run: |
           make
       - name: Install to ~/tmp and Inspect
         run: |
           DESTDIR=~/tmp make install-strip
+          DESTDIR=~/tmp make installcheck
           tree ~/tmp
       - name: Run Unit Tests
         run: |
           make check || (cat test/test-suite.log; false)
+      - name: Distcheck
+        run: make distcheck DISTCHECK_CONFIGURE_FLAGS=--enable-werror CFLAGS=-Wall
       - name: Upload Test Results
         uses: actions/upload-artifact@v2
         with:
